# example-iot-telemetry

./: Cargo.toml  Justfile  README.md
docs/: presenterm.md
src/: app.rs  event.rs  main.rs  queries.rs  readings.rs  sensors.rs  ui.rs  utils.rs
surql/: graph.surql  initial_data.surql  sample_queries.surql  sensor_anomaly_alert.surql  table_view.surql
surql/migrations/: 0.schema.surql  2.sensor_anomaly_alert.surql
