[package]
name = "telemetry-simulator"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
noise = "0.9"
rand = "0.9"
serde = { version = "1.0.219", features = ["derive"] }
surrealdb = "2.3.3"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }

[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1
