[package]
name = "telemetry-simulator"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
noise = "0.9"
rand = "0.9"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
surrealdb = "2.3.3"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }

[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1
